logs/Upbit_api/insert_bitcoin/2022-07-19T00:00:00+00:00/4.log
[2022-07-20 05:54:24,671] {taskinstance.py:1037} INFO - Dependencies all met for <TaskInstance: Upbit_api.insert_bitcoin scheduled__2022-07-19T00:00:00+00:00 [queued]>
[2022-07-20 05:54:24,685] {taskinstance.py:1037} INFO - Dependencies all met for <TaskInstance: Upbit_api.insert_bitcoin scheduled__2022-07-19T00:00:00+00:00 [queued]>
[2022-07-20 05:54:24,685] {taskinstance.py:1243} INFO - 
--------------------------------------------------------------------------------
[2022-07-20 05:54:24,685] {taskinstance.py:1244} INFO - Starting attempt 4 of 5
[2022-07-20 05:54:24,685] {taskinstance.py:1245} INFO - 
--------------------------------------------------------------------------------
[2022-07-20 05:54:24,702] {taskinstance.py:1264} INFO - Executing <Task(PostgresOperator): insert_bitcoin> on 2022-07-19 00:00:00+00:00
[2022-07-20 05:54:24,707] {standard_task_runner.py:52} INFO - Started process 900 to run task
[2022-07-20 05:54:24,711] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'Upbit_api', 'insert_bitcoin', 'scheduled__2022-07-19T00:00:00+00:00', '--job-id', '102', '--raw', '--subdir', 'DAGS_FOLDER/Upbit_Api.py', '--cfg-path', '/tmp/tmp_lplbrzx', '--error-file', '/tmp/tmp9j5vhpz5']
[2022-07-20 05:54:24,711] {standard_task_runner.py:77} INFO - Job 102: Subtask insert_bitcoin
[2022-07-20 05:54:24,782] {logging_mixin.py:109} INFO - Running <TaskInstance: Upbit_api.insert_bitcoin scheduled__2022-07-19T00:00:00+00:00 [running]> on host 0741836b2d3b
[2022-07-20 05:54:24,919] {taskinstance.py:1431} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=kimuksung2
AIRFLOW_CTX_DAG_ID=Upbit_api
AIRFLOW_CTX_TASK_ID=insert_bitcoin
AIRFLOW_CTX_EXECUTION_DATE=2022-07-19T00:00:00+00:00
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-07-19T00:00:00+00:00
[2022-07-20 05:54:24,930] {base.py:79} INFO - Using connection to: id: postgres_xcom_test. Host: postgres, Port: 5432, Schema: test, Login: ***, Password: ***, extra: {}
[2022-07-20 05:54:24,935] {dbapi.py:225} INFO - Running statement: 
            insert into test_data (name , time_utc , time_ktc , opening_price , low_price , trade_price ) 
            values (
                KRW-BTC,
                2022-07-18T23:59:00,
                2022-07-19T08:59:00,
                29439000.0,
                29495000.0,
                29314000.0,
                29322000.0
            )
        , parameters: None
[2022-07-20 05:54:24,936] {taskinstance.py:1718} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1334, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1460, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1516, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 71, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "T23"
LINE 5:                 2022-07-18T23:59:00,
                                  ^

[2022-07-20 05:54:24,950] {taskinstance.py:1282} INFO - Marking task as UP_FOR_RETRY. dag_id=Upbit_api, task_id=insert_bitcoin, execution_date=20220719T000000, start_date=20220720T055424, end_date=20220720T055424
[2022-07-20 05:54:24,973] {standard_task_runner.py:92} ERROR - Failed to execute job 102 for task insert_bitcoin
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1334, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1460, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1516, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 71, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "T23"
LINE 5:                 2022-07-18T23:59:00,
                                  ^

[2022-07-20 05:54:25,005] {local_task_job.py:154} INFO - Task exited with return code 1
[2022-07-20 05:54:25,042] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
